fix logo in footer on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -1376,7 +1376,7 @@ hr {
     flex-direction: column;
 
     .logo {
-      width: 70%;
+      width: 30%;
       padding-left: 0;
     }
     .footer-section {
